fix map popup on safari

--- a/app/assets/stylesheets/application/design-system/map.sass
+++ b/app/assets/stylesheets/application/design-system/map.sass
@@ -46,6 +46,7 @@
         display: none
     @include media-breakpoint-up(md)
         &-popup-content
+            width: auto !important
             article
                 display: flex
                 picture, .placeholder-illustration
